# estimation

./: .gitignore  CONTRIBUTING.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  DEVELOPER_PLAYBOOK.md  GIT_POLICY.md  RELEASING.md  SECURITY.md  WORKFLOWS.md
plumbing_takeoff/: __init__.py  app.py  cli.py  doctor.py  exports.py  extractor.py  models.py  pdf_pipeline.py  takeoff.py
plumbing_takeoff/schemas/: bom_report.schema.json
scripts/: build_linux.sh  build_windows.ps1  dev_setup.ps1  dev_setup.sh  install_linux.sh  uninstall_linux.sh
tests/: test_doctor_and_extractor.py  test_models_and_exports.py  test_pdf_pipeline.py  test_takeoff_cli.py
